<resources>
    <string-array name="languages_array">
        <item>language...</item>
        <item>English</item>
        <item>Vietnamese</item>
    </string-array>
    <string name="skip">Skip</string>
    <string name="app_name">FoodHub</string>
    <string name="welcome_to">Welcome to</string>
    <string name="welcome_description">Your favourite foods delivered fast at your door.</string>
    <string name="sign_in_with">sign in with</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="start_with_email_or_phone">Start with email or phone</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_underline"><u>Sign In</u></string>
    <string name="sign_in">Sign In</string>
</resources>